--- a/welcome.html
+++ b/welcome.html
@@ -13,9 +13,9 @@
     <div class="welcome-container">
         <!-- 🔹 Logo -->
         <div class="logo-container">
-            <img src="logo.png" alt="Coding Moves Logo" class="logo">
+            <img src="logo.png" alt="Coding Moves Logo" class="logo"><h1>CODING MOVES</h1>
         </div>
-
+       
         <h1>🎉 Welcome to <strong>Coding Moves</strong>!</h1>
         <p id="userInfo">Loading user info...</p>
         <button onclick="logOut()">Log Out</button>
