--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Coding Moves</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.ico" >
 
     <!-- Firebase & EmailJS -->
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
